# cpp-test

./: .gitignore  CMakeLists.txt  Dockerfile.build  README.md  build.ps1  config.ini
aptly/: Dockerfile  docker-compose.yml  entrypoint.sh
include/core/: Config.h  Models.h
include/player/: ZonePlayer.h
include/services/: CliService.h  PidService.h  PlaylistService.h  WindowService.h
include/utils/: VideoOptimizer.h
packaging/nctv-player_1.0.1_armhf/DEBIAN/: control
packaging/nctv-player_1.0.2_arm64/DEBIAN/: control
packaging/nctv-player_1.0.2_arm64/lib/systemd/system/: nctv-player.service
packaging/nctv-player_1.0.2_armhf/DEBIAN/: control  postinst
scripts/: build_pi_deb.sh  build_windows.bat  publish_to_aptly.sh
src/: main.cpp
src/core/: Config.cpp
src/player/: ZonePlayer.cpp
src/services/: CliService.cpp  PidService.cpp  PlaylistService.cpp  WindowService.cpp
src/utils/: VideoOptimizer.cpp
ui/: Main.qml
ui/features/menu/: Menu.qml
ui/features/player/: BackgroundZone.qml  HorizontalZone.qml  MainZone.qml  PlayerLayout.qml  VerticalZone.qml
ui/features/splash/: Splash.qml
ui/shared/: Styles.qml
